--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,5 +1,11 @@
 .App {
+  /* display: flex; */
+  /* justify-content: center; */
+  margin: 0 auto;
+  width: 1280px;
+}
+
+.main {
   display: flex;
-  justify-content: center;
-  background: #131316;
+  padding: 0 20px;
 }
