--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,8 +1,31 @@
 .burgerIngredients {
   max-width: 600px;
   width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .ingredientsNav {
   display: flex;
+}
+
+.ingredientsContainer {
+  max-height: 80vh;
+  overflow-y: scroll;
+}
+
+.ingredientsContainer::-webkit-scrollbar {
+  width: 8px;
+}
+
+.ingredientsContainer::-webkit-scrollbar-track {
+  background: #2F2F37;
+}
+
+.ingredientsContainer::-webkit-scrollbar-thumb {
+  background: #8585AD;
+/* text/dark grey (secondary text) */
+
+border: 3px solid #8585AD;
 }
