--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-*, *::before, *::after {
+/* *, *::before, *::after {
   box-sizing: border-box;
-}
+} */
 
 body {
   margin: 0;
   background: #131316;
+  overflow: hidden;
 }
