--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -8,6 +8,12 @@
   min-width: 550px;
 }
 
+.emptyBurgerConstructor {
+  max-width: 600px;
+
+  /* word-wrap: break-word; */
+}
+
 .burgerConstructorFilling {
   display: flex;
   flex-direction: column;
@@ -36,6 +42,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  max-width: 600px;
   margin-right: 16px;
 }
 
