feat: add user register action and reducer, refactored states in form inputs

--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -20,3 +20,14 @@
   align-items: center;
   cursor: pointer;
 }
+
+.activeLink, .link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.activeLink {
+  color: #F2F2F3;
+}
