--- a/src/components/profile-menu/profile-menu.module.css
+++ b/src/components/profile-menu/profile-menu.module.css
@@ -14,3 +14,10 @@
 .activeLink {
   color: #F2F2F3;
 }
+
+.button {
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
