--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,7 +1,14 @@
 .header {
+  width: 100%;
+  background-color: #1c1c21;
+}
+
+.headerContent {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1280px;
 }
 
 .menu {
