--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,5 +1,9 @@
 .app {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
   margin: 0 auto;
-  width: 1280px;
+  width: 100%;
+  min-width: 1280px;
   height: 100vh;
 }
