--- a/src/pages/feed/feed.module.css
+++ b/src/pages/feed/feed.module.css
@@ -1,7 +1,33 @@
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 0 20px;
+  margin: 0 auto;
+  width: 1240px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  /* width: 100%; */
+  /* max-width: 1280px; */
+}
+
+.feedContent {
+  display: flex;
+  /* flex: 1;
+  width: 1240px; */
+  /* margin: 0 auto; */
+
+  /* padding: 0 20px; */
+}
+
 .feedContainer {
+  margin: 0;
+  padding: 0;
   width: 608px;
   max-width: 99%;
-  max-height: 73vh;
+  max-height: calc(100vh - 40px - 86px);
+  list-style-type: none;
   overflow-y: scroll;
 }
 
@@ -16,4 +42,8 @@
 .feedContainer::-webkit-scrollbar-thumb {
   background: #8585AD;
   border: 3px solid #8585AD;
+}
+
+.ordersTable {
+  display: flex;
 }
