feat: add functionality to feed page & order-library pages

--- a/src/components/feed-components/order-card/order-card.module.css
+++ b/src/components/feed-components/order-card/order-card.module.css
@@ -64,8 +64,12 @@
   z-index: 5;
 }
 
+.ingredientExtraIcon {
+  opacity: .4;
+}
+
 .extraIngText {
-  /* background: #000 url('../../../images/extra-ingredient.png') no-repeat center; */
-  z-index: 2;
+  position: absolute;
+  z-index: 10;
 }
 
