--- a/src/pages/feed/feed.module.css
+++ b/src/pages/feed/feed.module.css
@@ -26,7 +26,7 @@
   padding: 0;
   width: 608px;
   max-width: 99%;
-  max-height: calc(100vh - 40px - 86px);
+  max-height: calc(100vh - 100px - 86px);
   list-style-type: none;
   overflow-y: scroll;
 }
@@ -49,13 +49,18 @@
 }
 
 .orderTableContent {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(10, 1fr);
+  grid-auto-flow: column;
+  gap: 8px;
   width: 272px;
-  height: 152px;
-  overflow-x: scroll;
+  padding-bottom: 10px;
+  overflow-y: hidden;
 }
 
 .orderTableContent::-webkit-scrollbar {
-  width: 5px;
+  height: 7px;
 }
 
 .orderTableContent::-webkit-scrollbar-track {
@@ -64,5 +69,5 @@
 
 .orderTableContent::-webkit-scrollbar-thumb {
   background: #8585AD;
-  border: 1px solid #8585AD;
+  border: 3px solid #8585AD;
 }
